# dlsa

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PHASE_CHECKLIST.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: backtest-pit.md  data-ingest.md  news-gate-v2.md  selection-firewall.md  shadow-book.md
.claude/skills/dlsa-quant-guardrails/: SKILL.md
.claude/skills/dlsa-quant-guardrails/references/: dlsa-methodology.md
configs/: backtest.yaml  daily.yaml  test_min.yaml
dlsa/: config.py  metrics.py
dlsa/allocation/: __init__.py
dlsa/backtest/: dates.py  engine.py  portfolio.py  run.py
dlsa/data/: calendar.py  identifier_map.py  loader.py  returns.py  schemas.py  universe.py  validation.py
dlsa/execution/: __init__.py  smoke.py
dlsa/factors/: pca.py
dlsa/jobs/: __init__.py  daily.py
dlsa/monitoring/: __init__.py  digest.py
dlsa/ops/: __init__.py  backup.py
dlsa/overlays/: __init__.py  crowding.py  regime.py
dlsa/policy/: __init__.py
dlsa/selection/: __init__.py  cpcv.py  run.py
dlsa/signals/: __init__.py  model.py  shrinkage.py
docs/: 01-interface-contracts.md  02-data-lake-schema.md  04-frozen-parameters.md  05-data-acquisition-guide.md  08-acceptance-criteria.md  alpha-roadmap.md  bear-case.md  ops-systems-review.md  pre-code-audit.md  red-team-review.md
tests/: conftest.py  test_identifier_map.py  test_lookahead_bias.py  test_validation.py
