[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlsa"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "duckdb",
    "torch",
    "scikit-learn",
    "statsmodels",
    "hmmlearn",
    "yfinance",
    "pandas-market-calendars",
    "alpaca-py",
    "sec-edgar-downloader",
    "fredapi",
    "requests",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "pandera",
    "quantstats",
    "mlflow",
    "pytest",
    "ruff",
]

[dependency-groups]
dev = [
    "pytest-cov",
    "pre-commit",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
